--- a/views/userDashboard.handlebars
+++ b/views/userDashboard.handlebars
@@ -30,122 +30,6 @@
 </h3>
 
 <div class="grid-x">
-
-    <div class="card column medium-10 cell">
-      <div class="card-divider">
-        <h3 href="{{article.article.link}}">
-          <a>
-            Article Title Here
-          </a>
-        </h3>
-        <button data-open="postModal">
-          <i class="fa-solid fa-square-plus custom-plus" id="new-form-btn"></i>
-        </button>
-      </div>
-      <div class="card-section">
-        <h4>Short Description Here</h4>
-      </div>
-      <div class="reveal" id="postModal" data-reveal>
-        <form>
-          <h4> example article title
-            {{article.article.title}} </h4>
-          <input type="text" placeholder="Enter your post here" class="form-input" id="post-input" required>
-          <a href="/teamDashboard" class="submit">Submit Post!</a>
-        </form>
-      </div>
-    </div>
-    <div class="card column medium-10">
-      <div class="card-divider">
-        <h3 href="{{article.article.link}}">
-          <a>
-            Article Title Here
-          </a>
-        </h3>
-        <button data-open="postModal">
-          <i class="fa-solid fa-square-plus custom-plus" id="new-form-btn"></i>
-        </button>
-      </div>
-      <div class="card-section">
-        <h4>Short Description Here</h4>
-      </div>
-      <div class="reveal" id="postModal" data-reveal>
-        <form>
-          <h4> example article title
-            {{article.article.title}} </h4>
-          <input type="text" placeholder="Enter your post here" class="form-input" id="post-input" required>
-          <a href="/teamDashboard" class="submit">Submit Post!</a>
-        </form>
-      </div>
-    </div>
-    <div class="card column medium-10">
-      <div class="card-divider">
-        <h3 href="{{article.article.link}}">
-          <a>
-            Article Title Here
-          </a>
-        </h3>
-        <button data-open="postModal">
-          <i class="fa-solid fa-square-plus custom-plus" id="new-form-btn"></i>
-        </button>
-      </div>
-      <div class="card-section">
-        <h4>Short Description Here</h4>
-      </div>
-      <div class="reveal" id="postModal" data-reveal>
-        <form>
-          <h4> example article title
-            {{article}} </h4>
-          <input type="text" placeholder="Enter your post here" class="form-input" id="post-input" required>
-          <a href="/teamDashboard" class="submit">Submit Post!</a>
-        </form>
-      </div>
-    </div>
-    <div class="card column medium-10">
-      <div class="card-divider">
-        <h3 href="{{article.article.link}}">
-          <a>
-            Article Title Here
-          </a>
-        </h3>
-        <button data-open="postModal">
-          <i class="fa-solid fa-square-plus custom-plus" id="new-form-btn"></i>
-        </button>
-      </div>
-      <div class="card-section">
-        <h4>Short Description Here</h4>
-      </div>
-      <div class="reveal" id="postModal" data-reveal>
-        <form>
-          <h4> example article title
-            {{article.article.title}} </h4>
-          <input type="text" placeholder="Enter your post here" class="form-input" id="post-input" required>
-          <a href="/teamDashboard" class="submit">Submit Post!</a>
-        </form>
-      </div>
-    </div>
-    <div class="card column medium-10">
-      <div class="card-divider">
-        <h3 href="{{article.article.link}}">
-          <a>
-            Article Title Here
-          </a>
-        </h3>
-        <button data-open="postModal">
-          <i class="fa-solid fa-square-plus custom-plus" id="new-form-btn"></i>
-        </button>
-      </div>
-      <div class="card-section">
-        <h4>Short Description Here</h4>
-      </div>
-      <div class="reveal" id="postModal" data-reveal>
-        <form>
-          <h4> example article title
-            {{article.article.title}} </h4>
-          <input type="text" placeholder="Enter your post here" class="form-input" id="post-input" required>
-          <a href="/teamDashboard" class="submit">Submit Post!</a>
-        </form>
-      </div>
-
   {{#each article}}
   <div class="card column medium-10 cell">
     <h3>{{category}}</h3>
@@ -164,13 +48,11 @@
     </div>
     <div class="reveal" id="postModal" data-reveal>
       <form>
-        <h4 data-id={{article_id}} id="article-id"> Article title:
-          {{headline}} </h4>
+        <h4 data-id={{article_id}} id="article-id">{{headline}} </h4>
         <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title" required>
         <textarea type="text" placeholder="Enter your post here" class="form-input" name="post-input" required></textarea>
         <a href="/teamDashboard" class="submit" id="submit-post">Submit Post!</a>
       </form>
-
     </div>
   </div>
   {{/each}}
