--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,10 @@
     --rubik-bold: 600;
 }
 
+/* IMAGE SHADOWS */
+/* box-shadow: 0px 2px 10px 4px rgba(20, 20, 20, 0.75); */
+
+
 h1, 
 h2, 
 h3, 
@@ -28,51 +32,111 @@ a {
     font-family: 'Rubik', monospace, sans-serif;
 }
 
-h1,
 h2,
-h3,
+h3 {
+    color: var(--background);
+    font-weight: var(--rubik-bold);
+    font-size: 36px;
+}
+
 h4 {
-    color: var(--theme);
-    /* color: var(--background); */
+    color: var(--background);
+    font-weight: var(--rubik-bold);
+    font-size: 28px;
 }
 
 p,
 a {
     color: var(--background);
-    /* color: var(--theme); */
+}
+
+.word-change {
+    color: var(--theme);
 }
 
 .custom-title {
-    color: var(--background);
+    font-size: 28px;
+    font-weight: var(--rubik-bold);
+}
+
+.logo-bracket {
+    font-size: 38px;
+    color: var(--theme);
+    text-shadow: 1px 1px 6px rgba(39, 99, 74, 0.75);
 }
 
 .custom-title:hover {
-    color: var(--theme);
     cursor: pointer;
+    color: var(--theme);
+    text-shadow: 1px 1px 6px rgba(39, 99, 74, 0.75);
+    transition: 0.2s;
 }
 
-.hero-img {
-    width: 420px;
+.nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.nav li a:hover {
+    cursor: pointer;
+    color: var(--theme);
+    text-shadow: 1px 1px 6px rgba(39, 99, 74, 0.75);
+    transition: 0.2s;
+}
+
+.landing-img {
+    width: 480px;
     height: auto;
+    box-shadow: 0px 2px 10px 4px rgba(20, 20, 20, 0.75);
+}
+
+.info-img {
+    width: 380px;
+    height: auto;
+    box-shadow: 0px 2px 10px 4px rgba(20, 20, 20, 0.75);
 }
 
 .form-btn {
-    padding: 6px;
-    border: 2px solid var(--theme);
     background-color: var(--off-black);
+    color: var(--background);
+    padding: 8px;
+    border: 3px solid var(--theme);
+}
+
+.form-link {
+    color: var(--theme);
+    text-decoration: none;
+}
+
+.form-link:visited {
+    color: var(--theme);
+}
+
+.form-link:hover {
+    cursor: pointer;
+    color: var(--theme);
+    text-shadow: 1px 1px 6px rgba(39, 99, 74, 0.75);
+    transition: 0.2s;
+}
+
+.form-btn:visited {
+    background-color: var(--off-black);
+    color: var(--background);
 }
 
 .form-btn:hover {
     color: var(--off-black);
     background-color: var(--theme);
-    box-shadow: 0px 12px 28px -7px rgba(39, 99, 74, 0.75);
+    box-shadow: 0px 0px 8px 3px rgba(39, 99, 74, 0.75);
     transition: 0.3s;
 }
 
+
 .hero-container {
-    margin: 0;
     background-color: var(--off-black);
-    color: var(--theme);
+    padding: 38px;
+    margin-bottom: 32px;
 }
 
 .sub-container {
@@ -82,7 +146,16 @@ a {
 }
 
 .info-container {
-    background-color: var(--black);
+    background-color: var(--off-black);
+    padding: 24px;
+}
+
+.info-section {
+    margin-bottom: 120px;
+}
+
+.info-last-section {
+    margin-bottom: 12px;
 }
 
 .custom-header {
@@ -90,7 +163,32 @@ a {
     flex-direction: row;
     justify-content: space-between;
     background-color: var(--black);
+    margin-bottom: 12px;
 }
+
+.metrics-container {
+    max-width: 860px;
+    margin: 32px auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.metric {
+    text-align: center;
+}
+
+.metric h4 {
+    color: var(--theme);
+}
+
+.metric p {
+    font-size: 12px;
+    max-width: 200px;
+}
+
+
 
 .delete-button {
     width: 10px;
@@ -98,7 +196,7 @@ a {
 }
 
 .custom-card {
-    box-shadow: 0px 12px 28px -7px rgba(0,0,0,0.75);
+    box-shadow: 0px 2px 10px 4px rgba(20, 20, 20, 0.75);
     border-radius: 8px;
     padding: 12px;
 }
@@ -111,7 +209,7 @@ a {
 }
 
 .article-post-card {
-    box-shadow: 0px 12px 28px -7px rgba(0,0,0,0.75);
+    box-shadow: 0px 2px 10px 4px rgba(20, 20, 20, 0.75);
     border-radius: 8px;
     padding: 12px;
     height: 85vh;
@@ -126,13 +224,33 @@ a {
     border-radius: 8px;
 }
 
-
 .home {
-    background-color: var(--background);
+    background-color: var(--black);
     height: 100vh;
+    max-width: 960px;
+    margin: 0 auto;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;  
+}
+
+.call-to-action {
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    background-color: var(--off-black);
+    height: 200px;
+    display: flex;
+}
+
+.sign-up-call,
+.register-call {
+    text-align: center;
+}
+
+.sign-up-call p,
+.register-call p {
+    font-size: 18px;
 }
 
 .footer {
@@ -141,7 +259,9 @@ a {
     justify-content: center;
     align-items: center;
     position: relative;
+    background-color: var(--off-black);
     bottom: 0;
     width: 100%;
     height: 2.5rem;
+
 }
