made changes to layout in handlebars

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,7 +24,8 @@ h4,
 h5, 
 h6, 
 p, 
-a {
+a,
+label {
     font-family: 'Rubik', monospace, sans-serif;
 }
 
@@ -37,7 +38,8 @@ h4 {
 }
 
 p,
-a {
+a,
+label {
     color: var(--background);
     /* color: var(--theme); */
 }
@@ -60,6 +62,7 @@ a {
     padding: 6px;
     border: 2px solid var(--theme);
     background-color: var(--off-black);
+    color: var(--background);
 }
 
 .form-btn:hover {
@@ -67,6 +70,7 @@ a {
     background-color: var(--theme);
     box-shadow: 0px 12px 28px -7px rgba(39, 99, 74, 0.75);
     transition: 0.3s;
+    cursor: pointer;
 }
 
 .hero-container {
@@ -147,7 +151,7 @@ a {
 }
 
 .login-title {
-    background-color: red;
+    background-color: var(--off-black);
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -160,14 +164,13 @@ a {
 } */
 
 .login-btn-container {
-    border: 1px solid red;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
 
 .signup-page-title {
-    background-color: red;
+    background-color: var(--off-black);
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -178,4 +181,19 @@ a {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+}
+
+.login-form {
+    background-color: var(--black);
+}
+
+.article-title {
+    background-color: var(--off-black);
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.user-dashboard-article {
+    background-color: var(--black);
 }
