--- a/views/landingpage.handlebars
+++ b/views/landingpage.handlebars
@@ -11,7 +11,7 @@
                 <div class="media-object-section">
                     <h4>TeamSpeak is your Team's digital cohesion location!</h4>
                     <p>Chat about current events with your Team</p>
-                    <a class="hero-btn">Join the conversation!</a>
+                    <a class="form-btn">Join the conversation!</a>
                 </div>
             </div>
         </div>
