--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<form class="card">
+<form class="card login-form">
   <div class="card-divider login-title">
     <h2>Login Below!</h2>
   </div>
@@ -16,7 +16,7 @@
       </div>
       <div class="login-signup-buttons card-section grid-x grid-padding-x align-center">
         <div class="login-btn-container">
-        <button class="button" id="logInBtn">Login</button>
+        <button class="form-btn" id="logInBtn">Login</button>
         <a href="/signup" class="">Don't have an account? Signup Here!</a>
        </div>
       </div>
@@ -25,5 +25,3 @@
 </form>
 
 <script src="/js/logIn.js"></script>
-
->>>>>>> e3e28f5d76851e3050a0b92548a8bcaa246c9353
