--- a/views/signup-admin.handlebars
+++ b/views/signup-admin.handlebars
@@ -1,9 +1,9 @@
-<form>
-  <div>
-    <h3>Register your Company</h3>
+<form class="card login-form">
+  <div class="card-divider login-title">
+    <h2 class="login-title">Register your Company</h2>
   </div>
-  <div class="grid-container">
-    <div class="grid-x grid-padding-x">
+  <div class="grid-container card-section">
+    <div class="grid-x grid-padding-x grid-margin-x small-up1 medium-up-2 large-up-2">
       <div class="medium-6 cell">
         <label for="company-name-signup">What is the name of your Company?
           <input type="text" placeholder="Company Name" class="form-input" id="company-name-signup" required>
@@ -14,8 +14,10 @@
           <input type="text" placeholder="Team Name" class="form-input company-team-signup" required>
         </label>
       </div>
+      <div class="login-signup-buttons card-section grid-x grid-padding-x align-center">
       <a href="" class="add-team-button">Add a Team</a>
-      <button class="submit success button" id="company-signup-button">Finish Registering!</button>
+      <button class="form-btn" id="company-signup-button">Finish Registering!</button>
+      </div>
     </div>
   </div>
 </form>
