--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,4 @@
-<form class="card">
+<form class="card login-form">
 
   <div class="card-divider signup-page-title">
     <h2>Signup Below!</h2>
@@ -9,7 +9,7 @@
 
   <div class="grid-container card-section">
     <div class="grid-x grid-padding-x medium-up-1 large-up-2 small-up-1">
-      <div class="small-9 cell">
+      <div class="medium-6 cell">
         <label for="user-company">What is the name of the company you work at?
           <input type="text" placeholder="Company Name" class="form-input" id="user-company" required>
         </label>
@@ -34,8 +34,8 @@
           <input type="password" placeholder="Your Password" class="form-input" id="password-signup" required>
         </label>
       </div>
-      <div class="card-section signup-page-buttons">
-      <button class="submit success button" id="signup-button">Signup!</button>
+      <div class="login-signup-buttons card-section grid-x grid-padding-x align-center">
+      <button class="form-btn" id="signup-button">Signup!</button>
       <a href="/login">Already have an account? Log in here!</a>
       </div>
     </div>
