--- a/views/userDashboard.handlebars
+++ b/views/userDashboard.handlebars
@@ -1,4 +1,4 @@
-<p><button class="button" data-open="preferencesModal">Add your prefrences!</button></p>
+<p><button class="form-btn" data-open="preferencesModal">Add your prefrences!</button></p>
 <div class="reveal" id="preferencesModal" data-reveal>
   <div class="card-divider">
     <h3>Preferences</h3>
@@ -22,7 +22,7 @@
       <input id="checkbox14" type="checkbox" value="14"><label for="checkbox14">Parents</label>
       <input id="checkbox15" type="checkbox" value="15"><label for="checkbox15">Entertainment</label>
     </fieldset>
-    <button type="submit" class="button" id="select-preferences-btn">Submit Preferences!</button>
+    <button type="submit" class="form-btn" id="select-preferences-btn">Submit Preferences!</button>
   </div>
 </div>
 <h3>
@@ -31,9 +31,11 @@
 
 <div class="grid-x">
   {{#each article}}
-  <div class="card column medium-10 cell">
+  <div class="card column medium-10 cell user-dashboard-article">
+    <div class="article-title">
     <h3>{{category}}</h3>
-    <div class="card-divider">
+    </div>
+    <div class="card-divider article-title">
       <h3>
         <a href={{link}} target="_blank">
           {{headline}}
@@ -44,14 +46,14 @@
       </button>
     </div>
     <div class="card-section">
-      <h4>{{short_description}}</h4>
+      <p>{{short_description}}</p>
     </div>
     <div class="reveal" id="postModal" data-reveal>
-      <form>
+      <form class="login-form">
         <h4 data-id={{article_id}} id="article-id">{{headline}} </h4>
         <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title" required>
         <textarea type="text" placeholder="Enter your post here" class="form-input" name="post-input" required></textarea>
-        <a href="/teamDashboard" class="submit" id="submit-post">Submit Post!</a>
+        <a href="/teamDashboard" class="form-btn" id="submit-post">Submit Post!</a>
       </form>
     </div>
   </div>
