--- a/views/userDashboard.handlebars
+++ b/views/userDashboard.handlebars
@@ -1,11 +1,11 @@
 <p><button class="form-btn" data-open="preferencesModal">Add your prefrences!</button></p>
-<div class="reveal" id="preferencesModal" data-reveal>
-  <div class="card-divider">
-    <h3>Preferences</h3>
+<div class="reveal preferences-modal" id="preferencesModal" data-reveal>
+  <div class="card-divider preferences-modal-title">
+    <h4>Preferences</h4>
   </div>
   <div>
-    <fieldset class="large-6 cell">
-      <legend>Select which categories you prefer to read about</legend>
+    <fieldset class="large-6 cell card-section preferences-modal-values">
+      <p>Select which categories you prefer to read about</p>
       <input id="checkbox1" type="checkbox" value="1"><label for="checkbox1">Sports</label>
       <input id="checkbox2" type="checkbox" value="2"><label for="checkbox2">Politics</label>
       <input id="checkbox3" type="checkbox" value="3"><label for="checkbox3">Wellness</label>
@@ -25,22 +25,22 @@
     <button type="submit" class="form-btn" id="select-preferences-btn">Submit Preferences!</button>
   </div>
 </div>
-<h3>
+<h3 class="user-dashboard-title">
   Browse your News for the Day!
 </h3>
 
 <div class="grid-x">
   {{#each article}}
   <div class="card column medium-10 cell user-dashboard-article">
-    <div class="article-title">
+    <div class="card-divider article-category">
     <h3>{{category}}</h3>
     </div>
     <div class="card-divider article-title">
-      <h3>
-        <a href={{link}} target="_blank">
+      <h5>
+        <a href={{link}} class="form-link" target="_blank">
           {{headline}}
         </a>
-      </h3>
+      </h5>
       <button data-open="postModal">
         <i class="fa-solid fa-square-plus custom-plus"></i>
       </button>
@@ -49,8 +49,8 @@
       <p>{{short_description}}</p>
     </div>
     <div class="reveal" id="postModal" data-reveal>
-      <form class="login-form">
-        <h4 data-id={{article_id}} id="article-id">{{headline}} </h4>
+      <form class="post-modal">
+        <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
         <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title" required>
         <textarea type="text" placeholder="Enter your post here" class="form-input" name="post-input" required></textarea>
         <a href="/teamDashboard" class="form-btn" id="submit-post">Submit Post!</a>
