added in the news data to display in tabs instead of one long list, and other small changes in css and readme.md

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -339,6 +339,10 @@ legend {
     color: var(--theme);
 }
 
+.custom-plus{
+    color: var(--background);
+}
+
 .custom-plus:hover {
     color: var(--theme);
     cursor: pointer;
