--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@
     --theme: #52b788;
     --off-theme: #27634a;
     /* Support color */
-    --black: #2A2A2A;
+    --black: #2a2a2a;
     --off-black: #201f1f;
 
     /* FONTS */
@@ -33,7 +33,12 @@ label {
     font-family: 'Rubik', monospace, sans-serif;
 }
 
-h2,
+h2 {
+    font-size: 48px;
+    color: var(--theme);
+    font-weight: var(--rubik-bold);
+}
+
 h3 {
     color: var(--background);
     font-weight: var(--rubik-bold);
@@ -135,7 +140,7 @@ label {
     cursor: pointer;
 }
 
-
+/* ------------- LANDING PAGE - BEGIN ------------- */
 .hero-container {
     background-color: var(--off-black);
     padding: 38px;
@@ -197,16 +202,75 @@ label {
 }
 
 .custom-card {
-    box-shadow: 0px 2px 10px 4px rgba(20, 20, 20, 0.75);
-    border-radius: 8px;
-    padding: 12px;
+    background-color: var(--off-black);
+    border: 1px solid var(--off-black);
+    padding: 8px;
+    min-height: 400px;
+}
+
+/* FOUNDATION STYLE CHANGE */
+.cell {
+    margin-bottom: 16px;
 }
 
 .custom-card:hover {
-    transform: translateY(-0.5rem);
-    transition: 0.1s;
-    border: 3px solid var(--theme);
-    box-shadow: 0px 12px 28px -7px var(--off-theme);
+    transition: 0.2s;
+    box-shadow: 0px 0px 8px 3px rgba(39, 99, 74, 0.75);
+}
+
+.team-post-title {
+    color: var(--theme);
+}
+
+.team-post-body {
+    max-width: 90%;
+}
+
+.team-post-user {
+    display: flex;
+    justify-content: flex-start;
+    width: 90%;
+}
+
+.team-post-user p {
+    color: white;
+}
+
+.username {
+    color: var(--theme);
+}
+
+/* Separator for comments link on team dashboard */
+.bar {
+    background-color: var(--off-theme);
+    height: 1px;
+    width: 100%;
+    margin-bottom: 4px;
+}
+
+.top-bar {
+    margin-bottom: 16px;
+    background-color: var(--off-theme);
+    padding: 0;
+    height: 2px;
+    width: 75%;
+}
+
+.page-title {
+    margin-bottom: 16px;
+}
+
+.bar-wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .article-post-card {
@@ -214,15 +278,6 @@ label {
     border-radius: 8px;
     padding: 12px;
     height: 85vh;
-}
-
-.post-body {
-    border-bottom: 2px solid #2A2A2A;
-}
-
-.comment-card {
-    border: 2px solid var(--theme);
-    border-radius: 8px;
 }
 
 .home {
@@ -254,6 +309,8 @@ label {
     font-size: 18px;
 }
 
+/* ------------- LANDING PAGE - END ------------- */
+
 .footer {
     display: flex;
     flex-direction: row;
@@ -263,7 +320,7 @@ label {
     background-color: var(--off-black);
     bottom: 0;
     width: 100%;
-    height: 2.5rem;
+    height: 6.5rem;
 }
 
 .login-title {
@@ -306,4 +363,12 @@ label {
 
 .user-dashboard-article {
     background-color: var(--black);
+}
+
+/* ------------- MEDIA QUERIES ------------- */
+
+@media screen and (max-width: 760px) {
+    .nav {
+        flex-direction: column;
+    }
 }
