--- a/views/teamDashboard.handlebars
+++ b/views/teamDashboard.handlebars
@@ -1,18 +1,35 @@
+<div class="page-title">
+    <div class="bar-wrap">
+        <h2>Your Team</h2>
+        <div class="top-bar"></div>
+    </div>
+</div>
+
+
 <div class="grid-container">
     <div class="grid-x grid-margin-x small-up-1 medium-up-2 large-up-3">
+        {{#each posts}}
         <div class="cell">
-            {{#each posts}}
             <div class="card custom-card">
                 <div class="card-section">
-                    <h4>{{title}}</h4>
-                    <p>{{body}}
+                    <h4 class="team-post-title">{{title}}</h4>
+                    <p class="team-post-body">{{body}}
                     </p>
-                    <p>- {{username}}, {{format_date_time updated_at}}</p>
-                    <a href="/posts/{{post_id}}">Click to show Comments</a>
+                </div>
+                <div class="card-footer">
+                    <div class="team-post-user">
+                        <p>- <span class="username">{{username}}</span>, {{format_date_time updated_at}}</p>
+                    </div>
+                    <div class="team-post-comments">
+                        <div class="comment-container">
+                            <div class="bar"></div>
+                            <a href="/posts/{{post_id}}" class="form-link">Comments</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-            {{/each}}
         </div>
+        {{/each}}
     </div>
 </div>
 
@@ -28,4 +45,5 @@
 
 
 -->
-{{!-- <script src="/js/"></script> --}}
+{{!--
+<script src="/js/"></script> --}}
