--- a/views/signup-admin.handlebars
+++ b/views/signup-admin.handlebars
@@ -15,8 +15,10 @@
         </label>
       </div>
       <div class="login-signup-buttons card-section grid-x grid-padding-x align-center">
-      <a href="" class="add-team-button">Add a Team</a>
+      <div class="login-btn-container">
       <button class="form-btn" id="company-signup-button">Finish Registering!</button>
+      <a href="" class="add-team-button form-link">Add a Team</a>
+      </div>
       </div>
     </div>
   </div>
