--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,8 +2,8 @@
 
   <div class="card-divider signup-page-title">
     <h2>Signup Below!</h2>
-    <a href="/register">
-      <p>Registering a Company?</p>
+    <a href="/register" class="form-link">
+      Registering a Company?
     </a>
   </div>
 
