--- a/views/userDashboard.handlebars
+++ b/views/userDashboard.handlebars
@@ -26,7 +26,7 @@
   </div>
 </div>
 <h3 class="user-dashboard-title">
-  Browse your News for the Day!
+  Browse Your News for the Day!
 </h3>
 
 <div class="grid-x">
