--- a/views/oneUserDashboard.handlebars
+++ b/views/oneUserDashboard.handlebars
@@ -1,10 +1,9 @@
 <div class="page-title">
     <div class="bar-wrap">
-        <h2>Your Team</h2>
+        <h2>All Posts by {{username}}</h2>
         <div class="top-bar"></div>
     </div>
 </div>
-
 
 <div class="grid-container">
     <div class="grid-x grid-margin-x small-up-1 medium-up-2 large-up-3">
@@ -18,7 +17,7 @@
                 </div>
                 <div class="card-footer">
                     <div class="team-post-user">
-                        <p>- <a class= "form-link" href="/teamDashboard/{{username}}">{{username}}</a>, {{format_date_time updated_at}}</p>
+                        <p>- {{format_date_time updated_at}}</p>
                     </div>
                     <div class="team-post-comments">
                         <div class="comment-container">
