--- a/views/logout.handlebars
+++ b/views/logout.handlebars
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="col-md-6">
-        <div class="card" style="width: 300px;">
-            <div class="card-divider">
-                Thanks for Speaking today!
+        <div class="card login-form">
+            <div class="card-divider login-title">
+                <h2>Thanks for Speaking today!</h2>
             </div>
             <img src="assets/img/generic/rectangle-1.jpg">
             <div class="card-section">
