--- a/views/logout.handlebars
+++ b/views/logout.handlebars
@@ -1,14 +1,20 @@
 <div class="row">
     <div class="col-md-6">
-        <div class="card login-form">
+        <div class="card login-form" id="logout-pg-card">
             <div class="card-divider login-title">
                 <h2>Thanks for Speaking today!</h2>
             </div>
-            <img src="assets/img/generic/rectangle-1.jpg">
-            <div class="card-section">
-                <p>Have a solid day! TeamSpeak</p>
+            <div class="logout-card-section grid-x grid-padding-x align-center">
+                <div class="img-container">
+                    <img class="logout-page-img" src="/images/logoutPage-unsplash-bacila-vlad.jpg">
+                </div>
+                <div class="logout-pg-text">
+                    <h6>Sorry that you're leaving, but we know you'll be back!</h6>
+                    <h6>Have a nice day!</h6>
+                    <h6>-TeamSpeak</h6>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<script src="./js/logout.js"></script>
+<script src="/js/logout.js"></script>
