--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,8 +26,8 @@
 
 </header>
 
-<body class="home">
-    <div>
+<body class="home home-container">
+    <div class="">
         <header class="custom-header">
             <h1>
                 <a class="custom-title" href="/"><span class="logo-bracket">[</span> TS <span
@@ -49,10 +49,11 @@
         <main>
             {{{ body }}}
         </main>
-        <footer class="footer">
-            <p>&copy; TeamSpeak 2022</p>
-        </footer>
     </div>
+    <footer class="footer">
+        <div class="footer-bar"></div>
+        <p>&copy; TeamSpeak 2022</p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/js/foundation.min.js" crossorigin="anonymous">
     </script>
     <script>
@@ -61,4 +62,4 @@
 </body>
 
 </html>
-<script src="./js/logout.js"></script>
+<script src="/js/logout.js"></script>
