--- a/views/userDashboard.handlebars
+++ b/views/userDashboard.handlebars
@@ -1,4 +1,4 @@
-<p><button class="form-btn" data-open="preferencesModal">Add your prefrences!</button></p>
+<p><button class="form-btn" data-open="preferencesModal">Add your preferences</button></p>
 <div class="reveal preferences-modal" id="preferencesModal" data-reveal>
   <div class="card-divider preferences-modal-title">
     <h4>Preferences</h4>
@@ -22,11 +22,11 @@
       <input id="checkbox14" type="checkbox" value="14"><label for="checkbox14">Parents</label>
       <input id="checkbox15" type="checkbox" value="15"><label for="checkbox15">Entertainment</label>
     </fieldset>
-    <button type="submit" class="form-btn" id="select-preferences-btn">Submit Preferences!</button>
+    <button type="submit" class="form-btn" id="select-preferences-btn">Submit</button>
   </div>
 </div>
 <h3 class="user-dashboard-title">
-  Browse your News for the Day!
+  Your news for the day
 </h3>
 
 <ul class="tabs" data-tabs id="news-tabs">
