--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,8 +14,8 @@
           <input type="password" placeholder="Password" class="form-input" id="password-login" required>
         </label>
       </div>
-      <div class="login-signup-buttons card-section grid-x grid-padding-x align-center">
-        <div class="login-btn-container">
+      <div class="signup-page-buttons card-section grid-x grid-padding-x align-center">
+        <div class="">
         <button class="form-btn" id="logInBtn">Login</button>
         <a href="/signup" class="form-link">Don't have an account? Signup Here!</a>
        </div>
