--- a/views/signup-admin.handlebars
+++ b/views/signup-admin.handlebars
@@ -14,8 +14,8 @@
           <input type="text" placeholder="Team Name" class="form-input company-team-signup" required>
         </label>
       </div>
-      <div class="login-signup-buttons card-section grid-x grid-padding-x align-center">
-      <div class="login-btn-container">
+      <div class="signup-page-buttons card-section grid-x grid-padding-x align-center">
+      <div class="">
       <button class="form-btn" id="company-signup-button">Finish Registering!</button>
       <a href="" class="add-team-button form-link">Add a Team</a>
       </div>
