--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -34,7 +34,7 @@
           <input type="password" placeholder="Your Password" class="form-input" id="password-signup" required>
         </label>
       </div>
-      <div class="login-signup-buttons card-section grid-x grid-padding-x align-center">
+      <div class="signup-page-buttons card-section grid-x grid-padding-x align-center">
       <button class="form-btn" id="signup-button">Signup!</button>
       <a href="/login" class="form-link">Already have an account? Log in here!</a>
       </div>
